V.NEXT
----------
- [PATCH] Stop caching account manager values. Make BrokerDiscoveryClient coroutine-safe (#2050)
- [PATCH] Revert "Getting rid of account manager strategy in MSAL/OneAuth (#1988)" (#2041)
- [MINOR] Add BrokerDiscoveryClient + Tests (#2039)
- [MAJOR] Consolidate IStorageSupplier logic (#2033)
- [MINOR] Add active broker cache (#2030)
- [MAJOR] Added support for DeviceCodeFlow with device id claims. New API is only available in version 13 or higher (#2044)
- [MINOR] Replacing SHA-1 used in broker validation with SHA-512 (#2019)
- [MINOR] Removing thumbprint check from PKeyAuth challenge (#2045)
- [MINOR] Add android 14 check for skipping strong box isolation in pop token (#2053)

V.12.0.0
----------
- [MINOR] make getCurrentActiveBrokerPackageName case insensitive and trims the authenticator type (#2026)
- [PATCH] Update version for org.json:json to 20230227 (#2022)
- [MAJOR] Move Broker encryption logic to broker code. Some more refactoring. (#2016)
- [PATCH] Fix Error Type thrown for NO_ACCOUNT_FOUND (#2006)
- [MINOR] Separate constants for max client and broker protocol versions (#2008)
- [PATCH] Pulling device cert issuer check to beginning of OnReceivedClientCertRequest (#2010)
- [MINOR] Add method to clear receiver concurrentHashMap in LocalBroadcaster (#1993)
- [PATCH] Mapping ECDSA to EC in ClientCertRequest's keyTypes array (#2015)
- [PATCH] Fix NPE in OTEL code (#2018)
- [MINOR] Instrument PRTv3 flows (#2023)
- [MINOR] Updating different smartcards error message; updated string res files (#2021)
- [PATCH] Moving ClearCertPref call to clean up method (#2025)
- [PATCH] Fix target in token records to fix cache keys (#2027)
- [PATCH] Moving ClearCertPref to Factory instance (#2035)

V.11.0.0
----------
- [MINOR] Add CommandDispatcher methods to stop and reset silent request executor. (#2000)
- [MINOR] Support CIAM Authority Type (#1992)
- [PATCH] Send AT on KEY_AUTHTOKEN for ADAL Acquire token silently with Broker (#1996)