@@ -1,5 +1,6 @@
 V.NEXT
 ----------
+- [PATCH] Wire new Broker Discovery Client into MSAL - still disabled by default (#2057)
 - [PATCH] Stop caching account manager values. Make BrokerDiscoveryClient coroutine-safe (#2050)
 - [PATCH] Revert "Getting rid of account manager strategy in MSAL/OneAuth (#1988)" (#2041)
 - [MINOR] Add BrokerDiscoveryClient + Tests (#2039)
